@@ -1,36 +1,12 @@
 MD5 6142e999635783e19d5fc1a89165d9ff ChangeLog 4529
-RMD160 bc88559b74e58d746ce5ae22eef1412039d8be17 ChangeLog 4529
-SHA256 6588c355deba5dc1a24c84f8b0d06489c5437a0f0212f40e7beb7eb82c7b934e ChangeLog 4529
 MD5 e8e3fc943d40a2fa3260a042e8f0dcf6 files/digest-networkstatus-3.4.1 208
-RMD160 a6185d391139f96c8706b8459f811267aa8254f4 files/digest-networkstatus-3.4.1 208
-SHA256 13d734567761359795df4277f8e107a116627d38aca0531bfb91f1a0f4bf6e2f files/digest-networkstatus-3.4.1 208
-MD5 ed5f8c08265b32641a4cc480b7414fce files/digest-networkstatus-3.4.2 282
-RMD160 6c21b8a8578c49208c6a35e538dce0577c45e1b9 files/digest-networkstatus-3.4.2 282
-SHA256 68f1cbf0899c203a29e8a535da6e3df2f97811b7e967b76cabc15200470b270b files/digest-networkstatus-3.4.2 282
+MD5 90abf0bc7995b02daa2daec3aaeefa52 files/digest-networkstatus-3.4.2 282
 MD5 0b5d543dd13db98ba9001990b2e77964 files/digest-networkstatus-3.5.0 67
-RMD160 73aaed576f1e6200d79acd771170b16dce103cc6 files/digest-networkstatus-3.5.0 67
-SHA256 4de1bac7db38497f0b1e4796a5bce40b3c2a3f55dd1e573b74bcdb93510d220b files/digest-networkstatus-3.5.0 67
 MD5 4505de7bf9eafb017c93b041e2fe4f2d files/digest-networkstatus-3.5.1 67
-RMD160 084a56cf56ec2dfd6142cd9a30d9aa0145f85766 files/digest-networkstatus-3.5.1 67
-SHA256 d867d9e02408e291c5fb35e19926b5b7ac495ff04a9e86d869a31e20c8ce76dd files/digest-networkstatus-3.5.1 67
 MD5 4b77483fe398773d23a75714c3dd6223 files/digest-networkstatus-3.5.2 247
-RMD160 6593013cc2b82f2b51819d483733f409262d7d91 files/digest-networkstatus-3.5.2 247
-SHA256 316a6c56abca376dcc823a955f36bb4a04daf20009db56ff7cd3f6f38f150c5e files/digest-networkstatus-3.5.2 247
 MD5 acc03a4b12bb0433a57e95bd253b9501 metadata.xml 156
-RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 metadata.xml 156
-SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a metadata.xml 156
 MD5 e99f178608901d861b2f73237e1c9b22 networkstatus-3.4.1.ebuild 418
-RMD160 92284dbf24582ed1502ef9dd165ff3aca69c2a5c networkstatus-3.4.1.ebuild 418
-SHA256 646e69473e9727f03ce0606d274d8b32c1f286faffe0629f90a3c4b8422f9cba networkstatus-3.4.1.ebuild 418
-MD5 cf4a4ff0fa42c768b58080fe2f062b30 networkstatus-3.4.2.ebuild 427
-RMD160 f9f3f3baee5915158b294f75b0f87d66eb773355 networkstatus-3.4.2.ebuild 427
-SHA256 04e2cb34d044fa227689cb5f1e6f8fda2fd019074b0c6ac0fdd5da76fca0f817 networkstatus-3.4.2.ebuild 427
+MD5 bc8ee15ee801684dc6a516b3b73bfb9c networkstatus-3.4.2.ebuild 432
 MD5 f05b4092db075222ed313db2d85286c0 networkstatus-3.5.0.ebuild 432
-RMD160 4213b92e6301ae5f97043b10455b7e85449070d7 networkstatus-3.5.0.ebuild 432
-SHA256 212efac183691f97ac5e4fadb6f87746c9c1b19545ee157b323a0c90c82d58a2 networkstatus-3.5.0.ebuild 432
 MD5 b3ffa104f609f18049ca4b4bf4d54da5 networkstatus-3.5.1.ebuild 433
-RMD160 d4292c54ad31f9c2bdfec9102837041b8c020a1d networkstatus-3.5.1.ebuild 433
-SHA256 b26e6da0c2f2d2a373a3ada73f478a2a3499f25519bad82a8233faa1cb219821 networkstatus-3.5.1.ebuild 433
 MD5 356bbfe2603467bae7214df4753c1d6b networkstatus-3.5.2.ebuild 433
-RMD160 766bc600bb251f8da69c52dfa89832dfa9cd9f9d networkstatus-3.5.2.ebuild 433
-SHA256 c5024a921f01c40335a96de0767a656b05824e652f432d930deaab8b50b246dd networkstatus-3.5.2.ebuild 433
