@@ -1,4 +1,4 @@
-MD5 7f8cc9a40c0190c5a6723f6325bcba06 kdepim-3.4.0.tar.bz2 11441545
 MD5 dea739570f660581aac9d264f5ab7c17 kdepim-3.4.0-3.4.1.tar.xdelta 689503
+MD5 7f8cc9a40c0190c5a6723f6325bcba06 kdepim-3.4.0.tar.bz2 11441545
 MD5 bed079698df3b9d211e032814965b083 kdepim-3.4.1-3.4.2.tar.xdelta 534400
 MD5 e7bd012faa559bcf2a949b6a8ed5ff7f kdepim-3.4.2.tar.bz2 11368492
