@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/networkstatus
-# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/networkstatus/ChangeLog,v 1.36 2006/03/22 20:15:45 danarmak Exp $
+# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/kde-base/networkstatus/ChangeLog,v 1.37 2006/03/26 19:57:12 agriffis Exp $
+
+  26 Mar 2006; Aron Griffis <agriffis@gentoo.org>
+  networkstatus-3.4.2.ebuild:
+  Mark 3.4.2 stable on ia64
 
 *networkstatus-3.5.2 (22 Mar 2006)
 
